libmongoc 1.25.0 (Unreleased)
=============================

Improvements:

  * Remove optional dependency of libicu.

Other:

  * The constructed source-distribution archive is no longer available as a
    release artifact. Please instead use the per-release repository archive
    attached to a GitHub release, or clone the repository at the desired release
    tag.

libmongoc 1.24.4
================

Fixes:
  * Fix build failure caused by missing `bson-dsl.h` install in libbson.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson

libmongoc 1.24.3
================

Fixes:

  * Fix possible memory leak on SCRAM authentication failure.
  * Fix possible recursive lock on network error in single-threaded client.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson
  * Jeremy Mikola
  * Roberto C. Sánchez

libmongoc 1.24.2
================

Fixes:

  * Fix possible crash if thread creation fails.
  * Fix possible assertion if `mongoc_cursor_new_from_command_reply_with_opts` is called with open cursor and no `serverId` option.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson

libmongoc 1.24.1
================

Fixes:

    * Remove unnecessary assert in bulk API. May result in an abort when creating bulk operations with the `mongoc_bulk_operation_new` API intended for wrapping drivers.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson

libmongoc 1.24.0
================

New Features:

  * Support MongoDB server version 7.0.
  * Support updated Queryable Encryption protocol.
      * Introduces backwards breaking changes to the Queryable Encryption protocol. Using Queryable Encryption now requires MongoDB server version 7.0+.
  * Support new Queryable Encryption features.