@@ -19,16 +19,12 @@ COMPILE_MATRIX = [
     ('archlinux',         'gcc',        None, ['cyrus']),
     ('debian10',          'gcc',        None, ['cyrus']),
     ('debian11',          'gcc',        None, ['cyrus']),
-    ('debian81',          'clang',      None, ['cyrus']),
-    ('debian81',          'gcc',        None, ['cyrus']),
     ('debian92',          'clang',      None, ['cyrus']),
     ('debian92',          'gcc',        None, ['cyrus']),
     ('rhel70',            'gcc',        None, ['cyrus']),
     ('rhel80',            'gcc',        None, ['cyrus']),
     ('rhel81-power8',     'gcc',        None, ['cyrus']),
     ('rhel83-zseries',    'gcc',        None, ['cyrus']),
-    ('ubuntu1404',        'clang',      None, ['cyrus']),
-    ('ubuntu1404',        'gcc',        None, ['cyrus']),
     ('ubuntu1604-arm64',  'gcc',        None, ['cyrus']),
     ('ubuntu1604',        'clang',      None, ['cyrus']),
     ('ubuntu1804-arm64',  'gcc',        None, ['cyrus']),
