@@ -53,18 +53,18 @@ all_variants = [
             "link-with-cmake-ssl-deprecated",
             "link-with-cmake-snappy",
             "link-with-cmake-snappy-deprecated",
-            OD([("name", "link-with-cmake-mac"), ("distros", ["macos-1014"])]),
-            OD([("name", "link-with-cmake-mac-deprecated"), ("distros", ["macos-1014"])]),
+            OD([("name", "link-with-cmake-mac"), ("distros", ["macos-1100"])]),
+            OD([("name", "link-with-cmake-mac-deprecated"), ("distros", ["macos-1100"])]),
             OD([("name", "link-with-cmake-windows"), ("distros", ["windows-vsCurrent-large"])]),
             OD([("name", "link-with-cmake-windows-ssl"), ("distros", ["windows-vsCurrent-large"])]),
             OD([("name", "link-with-cmake-windows-snappy"), ("distros", ["windows-vsCurrent-large"])]),
             OD([("name", "link-with-cmake-mingw"), ("distros", ["windows-vsCurrent-large"])]),
             OD([("name", "link-with-pkg-config"), ("distros", ["ubuntu1804-test"])]),
-            OD([("name", "link-with-pkg-config-mac"), ("distros", ["macos-1014"])]),
+            OD([("name", "link-with-pkg-config-mac"), ("distros", ["macos-1100"])]),
             "link-with-pkg-config-ssl",
             "link-with-bson",
             OD([("name", "link-with-bson-windows"), ("distros", ["windows-vsCurrent-large"])]),
-            OD([("name", "link-with-bson-mac"), ("distros", ["macos-1014"])]),
+            OD([("name", "link-with-bson-mac"), ("distros", ["macos-1100"])]),
             OD([("name", "link-with-bson-mingw"), ("distros", ["windows-vsCurrent-large"])]),
             "check-headers",
             "install-uninstall-check",
@@ -79,25 +79,6 @@ all_variants = [
             "SKIP_LEGACY_SHELL": "1"
         },
         tags=["pr-merge-gate"],
-    ),
-    Variant(
-        "clang34ubuntu",
-        "clang 3.4 (Ubuntu 14.04)",
-        "ubuntu1404-build",
-        ["release-compile", "debug-compile-rdtscp"],
-        {"CC": "clang"},
-    ),
-    Variant(
-        "clang35",
-        "clang 3.5 (Debian 8.1)",
-        "debian81-test",
-        [
-            "release-compile",
-            "debug-compile-sasl-openssl",
-            "debug-compile-nosasl-openssl",
-            ".authentication-tests .openssl",
-        ],
-        {"CC": "clang"},
     ),
     Variant(
         "clang38",
@@ -167,7 +148,6 @@ all_variants = [
         ],
         {"CC": "clang"},
     ),
-    Variant("gcc48ubuntu", "GCC 4.8 (Ubuntu 14.04)", "ubuntu1404-build", ["release-compile"], {"CC": "gcc"}),
     Variant(
         "gcc82rhel",
         "GCC 8.2 (RHEL 8.0)",
@@ -199,18 +179,6 @@ all_variants = [
             "debug-compile-nosasl-openssl",
             ".authentication-tests .openssl",
             ".latest .nossl",
-        ],
-        {"CC": "gcc"},
-    ),
-    Variant(
-        "gcc49",
-        "GCC 4.9 (Debian 8.1)",
-        "debian81-test",
-        [
-            "release-compile",
-            "debug-compile-sasl-openssl",
-            "debug-compile-nosasl-openssl",
-            ".authentication-tests .openssl",
         ],
         {"CC": "gcc"},
     ),
@@ -282,7 +250,7 @@ all_variants = [
     Variant(
         "darwin",
         "*Darwin, macOS (Apple LLVM)",
-        "macos-1014",
+        "macos-1100",
         [
             ".compression !.snappy",
             "release-compile",
@@ -486,10 +454,10 @@ all_variants = [
         [
             OD([("name", "debug-compile-nosasl-openssl")]),
             OD([("name", "debug-compile-nosasl-openssl-static")]),
-            OD([("name", "debug-compile-nosasl-darwinssl"), ("distros", ["macos-1014"])]),
+            OD([("name", "debug-compile-nosasl-darwinssl"), ("distros", ["macos-1100"])]),
             OD([("name", "debug-compile-nosasl-winssl"), ("distros", ["windows-vsCurrent-large"])]),
             OD([("name", ".ocsp-openssl")]),
-            OD([("name", ".ocsp-darwinssl"), ("distros", ["macos-1014"])]),
+            OD([("name", ".ocsp-darwinssl"), ("distros", ["macos-1100"])]),
             OD([("name", ".ocsp-winssl"), ("distros", ["windows-vsCurrent-large"])]),
             OD([("name", "debug-compile-nosasl-openssl-1.0.1")]),
             OD([("name", ".ocsp-openssl-1.0.1")]),
