@@ -4,6 +4,12 @@ libbson 1.24.4
 Fixes:
   * Fix libmongoc build failure caused by missing install of `bson-dsl.h`.
 
+Platform Support:
+
+  * Support for macOS 10.14 is dropped.
+  * Support for Ubuntu 14.04 is dropped.
+  * Support for Debian 8.1 is dropped.
+
 Thanks to everyone who contributed to the development of this release.
 
   * Kevin Albertson
